# Pockels-python

./: .gitignore  README.md  bright_speckle.py  data_parser.py  edge_finding.py  image_processing.py  image_processor.py  load_files.py  main.py  pyproject.toml  requirements.txt  select_directory.py  transmittance.py  utils.py
DEPRECATED/: bright_speckle.py  image_processor_old.py  load_files.py
logger/: log_test.py
logger/logger_configs/: 1-stderr-file.json
loguru_pack/: __init__.py  logging_test.py  loguru_config.py
test_data/D325150/: P.txt
