[tool.poetry]
name = "pockels-python"
version = "0.1.0"
description = ""
authors = ["John Feng <johnfengphd@gmail.com>"]
license = "Creative Commons MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
pprintpp = "^0.4.0"
h5py = "^3.10.0"
loguru = "^0.7.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
